RESOLVED FIXED214564
REGRESSION(r263551) Main thread often hangs while saving cookies
https://bugs.webkit.org/show_bug.cgi?id=214564
Summary REGRESSION(r263551) Main thread often hangs while saving cookies
Alex Christensen
Reported 2020-07-20 12:30:43 PDT
REGRESSION(r263551) Main thread often hangs while saving cookies
Attachments
Patch (4.64 KB, patch)
2020-07-20 12:32 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2020-07-20 12:32:06 PDT
Geoffrey Garen
Comment 2 2020-07-20 12:33:24 PDT
Comment on attachment 404743 [details] Patch r=me I wonder if we should do any coalescing here, now that we know it's somewhat common?
Alex Christensen
Comment 3 2020-07-20 12:35:28 PDT
Comment on attachment 404743 [details] Patch I think that's more trouble and risk than it's worth. This whole UI-process-cookie-store thing is a hack we're going to remove once we have a network process singleton.
EWS
Comment 4 2020-07-20 13:12:49 PDT
Committed r264613: <https://trac.webkit.org/changeset/264613> All reviewed patches have been landed. Closing bug and clearing flags on attachment 404743 [details].
Radar WebKit Bug Importer
Comment 5 2020-07-20 13:13:19 PDT
Note You need to log in before you can comment on or make changes to this bug.