REGRESSION(r263551) Main thread often hangs while saving cookies https://bugs.webkit.org/show_bug.cgi?id=214564 <rdar://problem/65779712>

Patch by Alex Christensen <achristensen@webkit.org> on 2020-07-20
Reviewed by Geoffrey Garen.

I had assumed that CFNetwork wouldn't write cookies on the main thread, but I was wrong.
That change caused spins, so let's just do the work on the WebsiteDataStore's queue instead.

* UIProcess/API/APIHTTPCookieStore.h:
* UIProcess/API/Cocoa/APIHTTPCookieStoreCocoa.mm:
(API::HTTPCookieStore::flushDefaultUIProcessCookieStore):
* UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::WebsiteDataStore::dispatchOnQueue):
* UIProcess/WebsiteData/WebsiteDataStore.h:

Canonical link: https://commits.webkit.org/227361@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264613 268f45cc-cd09-0410-ab3c-d52691b4dbfc